syntax = "proto3";

package io.anemos.metastore.core.proto;
option java_multiple_files = true;

message TestComplexArrayInt {
    repeated int32 field1 = 1;
}
