syntax = "proto3";

package io.anemos.metastore.core.proto;
option java_multiple_files = true;

message TestComplexMap {
    map<string, string> field1 = 1;
}